2001-09-14 Andras Varga

	* utils.h: added opp_nextrand(long& seed)
        * cmodule.cc: cModule's display string methods were reorganized:
        displayString(type) method split into displayString() and
        displayStringAsParent(), eliminating the type parameter. Similar change
        to the set...() methods. Old methods remained but were made deprecated.
        * cwatch.h: added unsigned int/long, signed/unsigned char, etc.
        constructors to cWatch.

2001-09-06 Andras Varga

	* cleanup around object copying: every class has now a copy constructor,
        an assignment operator, and every non-abstract class has dup().
        All dup()s call the copy constructor, and all copy constructors 
        call the assignment operator. In some classes the assignment operator
        calls copyNotSupported().

2001-08-23 Andras Varga

	* index.h: wrote doc comment about internal classes
        * generated API doc for earlier 2.1 release (undoing API changes
        introduced since 2.1 release on a local copy of the headers)

2001-08-12 Andras Varga

	* documented all typedefs

2001-08-11 Andras Varga

	* added _CONSTs to all copy constructors, operator=()'s and dup()'s
        * improved doc comments in cnetmod.h, cdetect.h, index.h

2001-08-05 Andras Varga

	* added a few dozen new _CONSTs; affects nearly all files

2001-08-04 Andras Varga

	* index.h: added doc comments

2001-08-03 Andras Varga

	* ccor.h cdetect.h cgate.h cmodule.h cobject.h cpar.h csimul.h cstk.h:
        improved/added documentation comments

2001-07-30  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* cenvir.h: operator<< definitions were broken. Introduced with
	revision nr. 1.5. Reverted according to rev. 1.4

2001-07-29 Andras Varga

	* made a lot of methods const (only experimental for now).
        Used a _CONST macro defined in defs.h; _CONST has to be explicitly
        enabled from the makefile (-D_CONST=const). After testing, _CONST